# AI-Agent

./: .env  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  SECURITY.md  dashboard.cmd  main.py  package.json  pnpm-lock.yaml  test-guardian.cmd  test-guardian.ps1
.claude/: launch.json
.github/workflows/: ci.yml
_legacy/: prompts.py
agent/: pyproject.toml
agent/src/guardian/: __init__.py  loop.py  server.py
agent/src/guardian/dashboard/: __init__.py  models.py  routes.py  state.py
agent/src/guardian/dashboard/static/: app.js  styles.css
agent/src/guardian/dashboard/templates/: index.html
agent/src/guardian/eval/: __init__.py  harness.py
agent/src/guardian/llm/: client.py  prompts.py  schemas.py
agent/src/guardian/mcp/: __init__.py  client.py  server.py
agent/src/guardian/safety/: checkpoints.py  permissions.py
agent/src/guardian/sandbox/: __init__.py  result_parser.py  runner.py
agent/src/guardian/tools/: code_intel.py  file_ops.py  git_ops.py  registry.py  spec_parser.py
agent/src/guardian/trace/: logger.py
agent/tests/: test_code_intel.py  test_dashboard.py  test_eval.py  test_file_ops.py  test_git_ops.py  test_loop.py  test_mcp.py  test_permissions.py  test_sandbox.py  test_schemas.py  test_server.py  test_spec_parser.py  test_tools.py
ai/: pyvenv.cfg
ai/Scripts/: activate  activate.bat
demo/express-users-api/: app.js  package.json
eval/: run_eval.py
eval/results/: eval_20260309_235919.txt  eval_20260310_001454.txt
sandbox/node/: Dockerfile
sandbox/python/: Dockerfile
(+3 files in other folders)
